--- a/youtube/static/css/style.css
+++ b/youtube/static/css/style.css
@@ -93,10 +93,10 @@ h1 span{
 
 /* *************************** */
 .divContainer{
-    padding: 0 10%;
+    padding: 0 8%;
     position: relative;
-    background: rgb(246, 246, 246);
-    min-height: 64.5vh;
+    background: rgb(20, 59, 78);
+    min-height: 64vh;
     padding-bottom: 50px;
 }
 
@@ -145,40 +145,80 @@ form #inputSubmit:hover{
 /* ************* */
 /* **UL VIDEOS** */
 /* ************* */
-#ulVideos{
-    margin-top: 20px;
+.divVideos{
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+    margin-top: 50px;
 }
 
-#ulVideos li{
-    margin-bottom: 40px;
+.card{
+    background-color: #FFF;
+    width: 350px;
+    border-radius: 0 0 5px 5px;
+    box-shadow: 0 4px 8px 0 #000000;
+    transition: all ease .3s;
+    margin-bottom: 100px;
+    margin-right: 65px;
+}
+.card:nth-child(4n){
+    margin-right: 0;
+}
+
+.card:hover{
+    transform: scale(.9);
+}
+.card img{
+    width: 100%;
+}
+
+.card > div{
+    padding: 10px;
+} 
+
+.card > div h2{
+    font-size: 25px;
+    font-family: sans-serif;
+    line-height: 35px;
+} 
+.card p {
     display: flex;
     justify-content: space-between;
-    align-items: center;
     font-size: 20px;
-    padding: 0px 0 0px 10px;
-    background: #ffffff;
+    letter-spacing: 1px;
+    font-family: sans-serif;
+    padding: 10px 0;
 }
-#ulVideos li span:nth-child(1){
-    font-weight: bold;
+.card .divLink{
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    padding-top: 0px;
 }
-
-#ulVideos li button{
+.card a{
     background: brown;
     color: #ffffff;
-    border: none;
-    font-weight: bold;
-    padding: 25px 20px;
-    cursor: pointer;
+    width: 100% !important;
+    padding: 15px;
+    text-decoration: none;
+    text-align: center;
+    font-size: 24px;
+}
+
+
+.para{
+    min-height: 48vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+    width: 100%;
+}
+.para p{
+    font-size: 25px;
     letter-spacing: 1px;
-    transition: all ease .3s;
+
 }
-
-#ulVideos li button:hover{
-    background: rgb(186, 49, 49);
-}
-
-
-
 
 /* ******************* */
 /* *****ERREUR******* */
